// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert should render danger alert 1`] = `
<div
  className="alert alert-danger undefined"
>
  Danger
</div>
`;

exports[`Alert should render info alert 1`] = `
<div
  className="alert alert-info undefined"
>
  Info
</div>
`;

exports[`Alert should render success alert 1`] = `
<div
  className="alert alert-success undefined"
>
  Success
</div>
`;

exports[`Alert should render warning alert 1`] = `
<div
  className="alert alert-warn undefined"
>
  Warning
</div>
`;
